--- a/000-default.conf
+++ b/000-default.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
 	<Directory /var/www/html>
 		Options +ExecCGI
-		DirectoryIndex index.html
+		DirectoryIndex index.py
 	</Directory>
 	AddHandler cgi-script .py
 
