fixed flask install. needed libapache2-mod-wsgi-py3 instead of libapache2-mod-wsgi

--- a/000-default.conf
+++ b/000-default.conf
@@ -1,10 +1,4 @@
 <VirtualHost *:80>
-	<Directory /var/www/html>
-		Options +ExecCGI
-		DirectoryIndex index.py
-	</Directory>
-	AddHandler cgi-script .py
-
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
 	# redirection URLs. In the context of virtual hosts, the ServerName
@@ -32,6 +26,20 @@
 	# following line enables the CGI configuration for this host only
 	# after it has been globally disabled with "a2disconf".
 	#Include conf-available/serve-cgi-bin.conf
+
+	WSGIDaemonProcess app user=www-data group=www-data threads=5
+	WSGIProcessGroup app
+	WSGIScriptAlias / /var/www/html/app.wsgi
+	Alias /static /var/www/html/static
+	<Directory /var/www/html/static>
+		Order allow,deny
+		Allow from all
+	</Directory>
+	Alias /templates /var/www/html/templates
+	<Directory /var/www/html/templates>
+		Order allow,deny
+		Allow from all
+	</Directory>
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
